# runeterra-lore

./: .dockerignore  .env  Makefile  docker-compose.yml  pyproject.toml
backend/: Dockerfile  README.md  __init__.py  config.py  main.py  pyproject.toml  run.py
backend/api/: champions.py  regions.py  skins.py
backend/api/routes/: regions.py
backend/models/: champion.py  region.py  skin.py
backend/services/: loader.py
backend/tests/: test_champions.py  test_regions.py
data/: champions.json  regions.json  skins.json
docs/: API_SPEC.yaml  ARCHITECTURE.md  CONTRIBUTING.md  ENGINEERING_GUIDE.md  PRODUCT_OVERVIEW.md  README.md  ROADMAP.md
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vitest.config.ts
frontend-vite-backup/: package.json
frontend-vite-backup/src/styles/: _variables.scss
frontend-vite-backup/src/test/: setup.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/champions/: index.tsx  page.tsx
frontend/app/champions/[id]/: page.tsx
frontend/components/: ChampionAbilities.tsx  ChampionSkins.tsx
frontend/lib/: api.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ChampionAbilities.tsx  ChampionRelationships.tsx  ChampionSkins.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChampionDetail.tsx  champions.tsx
frontend/src/styles/: _layout.scss  _mixins.scss
frontend/styles/: _champions.scss  _regions.scss  index.scss
