[tool.poetry]
name = "runeterra-backend"
version = "0.1.0"
description = "Runeterra Lore API backend"
authors = ["jpxch <orlando_alonzo@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.116.2"
uvicorn = "^0.35.0"
pydantic = "^2.11.9"
httpx = "^0.27.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"